# Raamatupidamine

./: CMakeLists.txt  README.md
App/: CMakeLists.txt  ChartOfAccountsFilterModel.cpp  ChartOfAccountsFilterModel.h  ChartOfAccountsListModel.cpp  ChartOfAccountsListModel.h  ChartOfAccountsWindow.cpp  ChartOfAccountsWindow.h  ChartOfAccountsWindow.ui  GeneralLedgerListModel.cpp  GeneralLedgerListModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  TransactionsListModel.cpp  TransactionsListModel.h  main.cpp
App/DB/: MigrationManager.cpp  MigrationManager.h  Migrations.cpp  Migrations.h
App/Dialogs/: CreateJournalDialog.cpp  CreateJournalDialog.h  CreateJournalDialog.ui  CreateTransactionDialog.ui  EditAccountDialog.cpp  EditAccountDialog.h  EditAccountDialog.ui  EditPeriodDialog.cpp  EditPeriodDialog.h  EditPeriodDialog.ui
App/Models/: Account.cpp  Account.h  PeriodOfAccount.cpp  PeriodOfAccount.h
App/Reports/: TrialBalanceListModel.cpp  TrialBalanceListModel.h  TrialBalanceWindow.cpp  TrialBalanceWindow.h  TrialBalanceWindow.ui
App/Windows/: ChartOfAccountsListModel.cpp  ChartOfAccountsListModel.h  ChartOfAccountsWindow.cpp  ChartOfAccountsWindow.h  ChartOfAccountsWindow.ui  PeriodsOfAccountListModel.cpp  PeriodsOfAccountListModel.h  PeriodsOfAccountWindow.cpp  PeriodsOfAccountWindow.h  PeriodsOfAccountWindow.ui  TransactionsWindow.cpp  TransactionsWindow.h  TransactionsWindow.ui
Docs/: Representing-Debits-Credits.md
